# lub3d

./: .editorconfig  .gitignore  .gitmodules  .luarc-doc.json  .luarc.json  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Generator.slnx  LICENSE  README.md  THIRD-PARTY-NOTICES  TODO.md  check.bat  check.sh  gen_licenses.py  gen_lua.py  index.html  package-lock.json  package.json  vite.config.ts  wrangler.toml
.github/workflows/: check.yml  deploy-playground.yml  licenses.yml
Generator/: BindingType.cs  CBindingGen.cs  ClangAst.cs  Generator.csproj  IModule.cs  LuaCats.cs  LuaCatsGen.cs  Metrics.cs  ModuleSpec.cs  Pipeline.cs  Program.cs  README.md  SpecTransform.cs  TypeRegistry.cs  sokol_app.c  test.json
Generator.Tests/: AppModuleTests.cs  CBindingGenSpecTests.cs  CTypeParserTests.cs  CppAstParseTests.cs  CppModeGenTests.cs  DearImguiModuleTests.cs  EmscriptenIdlReaderTests.cs  GenLuaCATSTests.cs  GenTests.cs  Generator.Tests.csproj  ImguiModuleTests.cs  JoltModuleTests.cs  LogModuleTests.cs  LuaCatsGenSpecTests.cs  MiniaudioModuleTests.cs  OpaqueTypeGenTests.cs  PipelineTests.cs  SignatureDumperTests.cs  SokolModuleTests.cs  TypeRegistryTests.cs  WebIdlBox2dTests.cs  WebIdlEnumDictTests.cs  WebIdlFormatterTests.cs  WebIdlImguiTests.cs  WebIdlInterfaceTests.cs  WebIdlParserTests.cs  WebIdlToSpecTests.cs  WebIdlValueTypeTests.cs
Generator/CBinding/: CBinding.cs  CBindingGen.cs
Generator/ClangAst/: ClangAst.cs  SignatureDumper.cs  SourceLink.cs  TypeRegistry.cs
Generator/LuaCats/: LuaCatsGen.cs
Generator/Modules/: App.cs
Generator/Modules/Box2d/: Box2dModule.cs
Generator/Modules/Imgui/: ImguiModule.cs
Generator/Modules/Jolt/: JoltModule.cs
Generator/Modules/Miniaudio/: MiniaudioModule.cs
Generator/Modules/Sokol/: App.cs  Audio.cs  DebugText.cs  Gfx.cs  Gl.cs  Glue.cs  Imgui.cs  Log.cs  Shape.cs  SokolModule.cs  Time.cs
Generator/Modules/Stb/: StbImageModule.cs
Generator/WebIdl/: EmscriptenIdlReader.cs  WebIdlFormatter.cs  WebIdlIr.cs  WebIdlParser.cs  WebIdlToSpec.cs
Generator/gen-out/: app.lua  sokol_app.c
cmake/: fips_compat.cmake  sokol-shdc.cmake
doc/: current.md  done.md  ownership-design.md  ownership-research.md  tasks.md
docs/: binding-gen.md  building.md  mane3d-rhythm-plan-v3-final.md  typed-fennel.md
examples/: app_smoke.lua  b2d_hello.lua  bench_glm.lua  breakout.lua  deferred.lua  hello.lua  imgui_test.lua  jolt_hello.lua  license.lua  lighting.lua  main.c  main.lua  miniaudio_test.lua  model.lua  raytracer.lua  rendering.lua  simple_triangle.lua  sleep_test.lua  time_smoke.lua  triangle.glsl  triangle.lua  util.lua
examples/b2d_tutorial/: camera.lua  draw.lua  init.lua  mouse_grab.lua
examples/b2d_tutorial/scenes/: buoyancy.lua  buoyancy_boat.lua  one_way_walls.lua  particles.lua  projected_trajectory.lua  racetrack_data.lua  sticky_projectiles.lua  suspension.lua  terrain_data.lua  top_down_car.lua
examples/cna/: init.lua
examples/deferred/: camera.lua  ctx.lua  geometry.lua  init.lua  light.lua  lighting.lua
examples/hakonotaiatari/: LICENSE  audio.lua  camera.lua  const.lua  cube.lua  enemy.lua  field.lua  game.lua  init.lua  input.lua  particle.lua  pathtracer.lua  player.lua  record.lua  renderer.lua  title.lua  tutorial.lua
examples/rendering/: camera.lua  ctx.lua  geometry.lua  init.lua  light.lua  lighting.lua
examples/rhythm/: const.lua  init.lua
examples/rhythm/audio/: manager.lua
examples/rhythm/bms/: converter.lua  encoding.lua  types.lua
examples/rhythm/core/: gauge.lua  judge.lua  scoring.lua  timing_map.lua
examples/rhythm/game/: playfield.lua
examples/rhythm/render/: effect.lua  lane.lua  note.lua  result.lua  ui.lua
examples/rhythm/song/: scanner.lua
examples/rhythm/test/: run_tests.lua  test_base36.lua  test_integration.lua  test_judge.lua  test_timing_map.lua
examples/rhythm/ui/: select.lua
examples/sjadm/: audio.lua  camera.lua  checkpoint.lua  init.lua  input.lua  item.lua  map.lua  mapdata.lua  pathtracer.lua  player.lua
idl/: box2d.idl  imgui.idl  jolt.idl  miniaudio.idl  sokol_app.idl  sokol_audio.idl  sokol_debugtext.idl  sokol_gfx.idl  sokol_gl.idl  sokol_glue.idl  sokol_imgui.idl  sokol_log.idl  sokol_shape.idl  sokol_time.idl  stb_image.idl
idl/extra/: app_extra.c  audio_extra.c  b2_chain_materials.c  b2_chain_points.c  box2d_extra.c  glue_extra.c  jolt_extra.cpp  miniaudio_extra.c  stb_image_extra.c
lib/: audio.lua  boot.lua  doc.lua  glm.lua  gpu.lua  headless_app.lua  hotreload.lua  log.lua  notify.lua  render_pass.lua  render_pipeline.lua  render_target.lua  shader.lua  sprite.lua  test.lua  texture.lua  util.lua
newexample/: CMakeLists.txt  main.c  sokol_impl.c  test_app.lua
plans/: refactor-generator-claude.md
playground/: docs.ts  gist.ts  main.ts  style.css  wasm.ts
public/: player.html
scripts/: build-ci.sh  build-wasm.sh  build.bat  check.py  convert_rube_terrain.py  egg2lua.py  gen_all_ir.py  gen_bindings.bat  gen_imgui.py  gen_ir_cli.py  gen_ir_imgui.py  gen_licenses.py  gen_lua.py  gen_pack.py  gen_symbols.py  gen_util_imgui.py  libraries.json  run_tests.bat  run_tests.sh  setup-emsdk.sh
scripts/binding_gen/: __init__.py  callback.py  codegen.py  enum.py  func.py  generator.py  ir.py  luacats.py  struct.py  types.py
scripts/bindings/: __init__.py  imgui.py  sokol.py
scripts/hooks/: pre-commit
src/: glm_lua.c  imgui_impl.cpp  imgui_lua.cpp  imgui_sokol.cpp  jolt_lua.cpp  lub3d_cli.c  lub3d_fs.c  lub3d_fs.h  lub3d_lua.c  lub3d_lua.h  lub3d_pack.h  mane3d_lua.c  miniaudio_impl.c  sapp_stub.c  shdc_lua.c  shdc_wrapper.cc  shdc_wrapper.h  sokol_impl.c  stb_image_impl.c  stb_image_lua.c
tests/: test.glsl  test_runner.c  test_shdc.cc
types/: imgui_sokol.lua
types/lub3d/: fs.lua
